--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -373,7 +373,10 @@ crypto_libmeowcoin_crypto_a_SOURCES = \
   crypto/ethash/lib/keccak/keccakf800.c \
   crypto/ethash/lib/support/attributes.h \
   crypto/ethash/helpers.hpp \
-  crypto/ethash/progpow_test_vectors.hpp
+  crypto/ethash/progpow_test_vectors.hpp \
+  crypto/scrypt.cpp \
+  crypto/scrypt-sse2.cpp \
+  crypto/scrypt.h
 
 if USE_ASM
 crypto_libmeowcoin_crypto_a_SOURCES += crypto/sha256_sse4.cpp
