Update auxpow logging, improve script handling, and adjust Makefile for crypto sources
- Changed logging from LogPrintf to LogPrint in auxpow.cpp for better log categorization.
- Enhanced script handling in auxpow.cpp, including debugging output for troubleshooting.
- Updated install_db4.sh to use an alternative mirror for Berkeley DB.
- Modified Makefile.am to conditionally include scrypt-sse2.cpp based on USE_SSE2.
- Refactored log category definitions in util.cpp and util.h for clarity and added AUXPOW category.
- Improved block serialization in block.cpp and block.h for consistency.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -342,12 +342,13 @@ crypto_libmeowcoin_crypto_a_SOURCES = \
   crypto/hmac_sha512.cpp \
   crypto/hmac_sha512.h \
   crypto/ripemd160.cpp \
+  crypto/ripemd160.h \
   crypto/sha1.cpp \
   crypto/sha1.h \
   crypto/sha256.cpp \
   crypto/sha256.h \
-  crypto/sha512.h \
   crypto/sha512.cpp \
+  crypto/sha512.h \
   crypto/ethash/include/ethash/ethash.h \
   crypto/ethash/include/ethash/ethash.hpp \
   crypto/ethash/include/ethash/hash_types.h \
@@ -356,7 +357,6 @@ crypto_libmeowcoin_crypto_a_SOURCES = \
   crypto/ethash/include/ethash/keccak.hpp \
   crypto/ethash/include/ethash/progpow.hpp \
   crypto/ethash/include/ethash/meowpow.hpp \
-  crypto/ethash/include/ethash/version.h \
   crypto/ethash/lib/ethash/bit_manipulation.h \
   crypto/ethash/lib/ethash/builtins.h \
   crypto/ethash/lib/ethash/endianness.hpp \
@@ -369,14 +369,17 @@ crypto_libmeowcoin_crypto_a_SOURCES = \
   crypto/ethash/lib/ethash/progpow.cpp \
   crypto/ethash/lib/ethash/meowpow.cpp \
   crypto/ethash/lib/keccak/keccak.c \
-  crypto/ethash/lib/keccak/keccakf1600.c \
   crypto/ethash/lib/keccak/keccakf800.c \
+  crypto/ethash/lib/keccak/keccakf1600.c \
   crypto/ethash/lib/support/attributes.h \
   crypto/ethash/helpers.hpp \
   crypto/ethash/progpow_test_vectors.hpp \
   crypto/scrypt.cpp \
-  crypto/scrypt-sse2.cpp \
   crypto/scrypt.h
+
+if USE_SSE2
+crypto_libmeowcoin_crypto_a_SOURCES += crypto/scrypt-sse2.cpp
+endif
 
 if USE_ASM
 crypto_libmeowcoin_crypto_a_SOURCES += crypto/sha256_sse4.cpp
