--- a/.github/workflows/build-meowcoin.yml
+++ b/.github/workflows/build-meowcoin.yml
@@ -29,7 +29,7 @@ env:
 jobs:
   check-jobs:
       # continue-on-error: true # Uncomment once integration is finished
-    runs-on: Meowcoin-Build-Master
+    runs-on: Meowcoin-Build-Master # Meowcoin Runner 22.04
     # Map a step output to a job output
     outputs:
       should_skip: ${{ steps.skip_check.outputs.should_skip }}
