--- a/.github/workflows/build-meowcoin.yml
+++ b/.github/workflows/build-meowcoin.yml
@@ -58,7 +58,7 @@ jobs:
     runs-on: MeowcoinBuildMaster # Meowcoin Runner 22.04
     strategy:
       matrix:
-       OS: [ 'windows', 'linux']
+       OS: [ 'windows', 'linux', 'aarch64', 'arm32v7']
       #  OS: [ 'windows', 'linux', 'linux-disable-wallet', 'arm32v7', 'arm32v7-disable-wallet', 'aarch64', 'aarch64-disable-wallet' ]
 
     steps:
